# sp4_panda_ctrl

./: CMakeLists.txt  README.md  package.xml
include/panda_cli_controller/: panda_controller.hpp
launch/: franka_control.launch  franka_control_sp.launch  panda.launch  panda_demo_gazebo.launch  panda_real_ctrl.launch  sp3_sim.launch
scripts/: startPanda_Gazebo_SP4Koordinator.sh  start_panda_gazebo_sp.sh  start_panda_real_sp.sh
src/: cli_interface.cpp  coordinate_translator.cpp  main.cpp  pan.cpp  panda_cli_control.cpp  panda_controller.cpp  sp_interface.cpp
urdf/: panda.urdf.xacro  realsense_d435.urdf.xacro  table.urdf.xacro
